fix : icon Image min width지정으로 layout shift 제거

--- a/frontend/src/assets/scss/equipment.scss
+++ b/frontend/src/assets/scss/equipment.scss
@@ -32,7 +32,7 @@
           .equipment-icon {
             display: flex;
             justify-content: center;
-            width:38px;
+            min-width:38px;
             overflow:hidden;
             min-width: 38px;
             img {
