--- a/frontend/src/assets/scss/link.scss
+++ b/frontend/src/assets/scss/link.scss
@@ -22,7 +22,7 @@
         display: flex;
         justify-content: center;
         // overflow:hidden;
-        width:32px;
+        min-width:32px;
         align-items: center;
         margin-right: 8px;
       }
