--- a/frontend/src/assets/scss/skills.scss
+++ b/frontend/src/assets/scss/skills.scss
@@ -25,7 +25,7 @@
           display: block;
         }
         .skill-icon {          
-          width:32px;
+          min-width:32px;
           text-align: center;
           margin-right: 4px;
           .skill-skill-level {
