--- a/frontend/src/assets/scss/stat.scss
+++ b/frontend/src/assets/scss/stat.scss
@@ -74,7 +74,7 @@
       align-items: center;
       margin-bottom: 0.25rem;
       .character-icon {
-        width:96px;
+        min-width:96px;
         display: flex;
         justify-content: center;
         align-items: center;
